build: add release, trigger on tag